<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:visible="true" />

    <item
        android:id="@+id/action_reload"
        android:title="@string/action_reload" />

    <item
        android:id="@+id/action_new_window"
        android:title="@string/action_new_window" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share" />

    <item
        android:id="@+id/action_add_shortcut"
        android:title="@string/action_add_shortcut" />

    <item
        android:id="@+id/action_set_night_mode"
        android:icon="@drawable/ic_theme_light_dark"
        android:title="@string/action_set_night_mode">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_night_mode_off"
                    android:title="@string/action_night_mode_off" />
                <item
                    android:id="@+id/action_night_mode_on"
                    android:title="@string/action_night_mode_on" />
                <item
                    android:id="@+id/action_night_mode_auto"
                    android:title="@string/action_night_mode_auto" />
            </group>

            <item
                android:id="@+id/action_enabled_dark_web_content"
                android:checkable="true"
                android:title="@string/action_enable_dark_web_content" />
        </menu>
    </item>

    <item
        android:id="@+id/action_clear_data"
        android:icon="@drawable/ic_delete_outline"
        android:title="@string/action_clear_data" />
    <item
        android:id="@+id/action_set_start_page"
        android:icon="@drawable/ic_home_edit_outline"
        android:title="@string/action_set_start_page" />
    <item
        android:id="@+id/action_permission"
        android:title="@string/action_permission"
        android:visible="true" />

    <item
        android:id="@+id/action_open_with_app"
        android:title="@string/action_open_with_app" />

    <item
        android:id="@+id/action_homepage"
        android:title="@string/action_homepage" />

    <item
        android:id="@+id/action_close_window"
        android:title="@string/action_close_window" />
</menu>
